@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST sass-rails-3.2.6.gem 88576 SHA256 a8e5618ecbc88b1b1678d3f7ccf5639d70da8e421b599546c3cef5c9627f67ed SHA512 ebbc9b3901176871dce8cdce3f3896fe726bfa7a826420ec6e313d6573119585a70d10cc008aec5e58888f60bc4794c08327c3e2743b11cfe3cd6305cf6e942e WHIRLPOOL 3432ab8c4f02d1a4b1421c04ab90682e4dc5060df67c3d86ee8c30363974a81ea10c98fb56ebacf1e1be505fa466dc5d295fec920908f83f3a8ba721b9344ebd
 DIST sass-rails-4.0.3.gem 92672 SHA256 b57665f95f63f063137e365d3e8a1c6d1340ec892d875aeeab93fb60e13f2ec8 SHA512 6b4e99d902edfc6c5e5229819b475522dc18f8b2a091c2a84e0e256d27ff067b3048ce242e856c6b8dbed3658b8f7e4e409f148093f5dd12150e0e68a67b260d WHIRLPOOL 2d7f83e0cf716d37c7badee16addc91cd379a11c85161315dfe520b026281cea4694c2985914057a97e8d9abb36bf3c42dd02882a15e89b41defbc40484a870d
+DIST sass-rails-4.0.4.gem 92160 SHA256 533acf34b9637b40b408986bbafff588d785452e2683145337eb002d1c87a270 SHA512 408dce558805e486875e99fb2458f8c0ab39a14da7768a9eaaa7468e47b5c8cb2b4d27322466b197b8bfef41d301f17d24036450b76544bf20580f1a368b0f72 WHIRLPOOL dd4c9483c5f4a7b0ac4bea5591e77ad2dbc888871984980977424fe5f304fddd4c5c94f1a1845c5fc7cdf0ad7587bb6481434cb328beb0c2b0e23a3a61752203
 EBUILD sass-rails-3.2.6.ebuild 1077 SHA256 cc7db530594630670d68695dd0b663fda4c36c59d1907ea0b037272d28ed1fab SHA512 56b8cf65d3e549aba33526a0eac935aeccd3cc0fb8d51bb84e0aafc22c508b8e201b47e8a0b3d4d8d5f23e6b0926c7553e8bf6e075c71096cd3f7974f1dbcb46 WHIRLPOOL 60fe853106b75e0e86624728efd94a37e7efe384910fb29522f14ac4643308b47fc9df9fddbf484aae69db9c30577b3211ab80620f9d3ca855756b66f0495dd1
 EBUILD sass-rails-4.0.3.ebuild 1005 SHA256 20a3b39d01d18e18d8bc1995c878fadb7d1f872160f1f4b287c640dbc83ca47f SHA512 d21cf619da80019f198ede7894a4006b6378cf1ac42986b39e16f3fb287f8018f9746cb9cdb4077e3994297c9dedc62bb814544a87d0d28e6abf7d1a4b2165aa WHIRLPOOL f20e4dd9b2e475b119c0cb5f138f862a39b01a7952b4e6aa96fcd93ac6af9ca73a83fa2d16c7b6986959b3d811ea676f1c6e6fec198948059b76674909d03a7d
-MISC ChangeLog 2607 SHA256 d4cef9ec18bdfc6e03cdf65e352ed360aac7d2c6be5dbfcdbe082950335b3d97 SHA512 3822f90bcd5bda4831fac3be540bd4c2d26b313ff7bab22fb529fcfca212ea97a8f6bd813aad160b4a9ec8df053c2a19ecb95e244f15f73f21e67bf3c90d158e WHIRLPOOL baaafe12c35858e23a96d265ab924b76679d67197cab95f954e4cbc290bbb09014ad2045e9b0efdedee929f313ba87fc407758c3082b03aee10bdd23b5c9afd3
+EBUILD sass-rails-4.0.4.ebuild 1003 SHA256 ea11b978c11d5b80b6343af9f685ee0e3a6f8d1118b3cfd4e8681072117df4a9 SHA512 78ac1a0b80362885be9ace0a4061586bb954bf674f052c8a95c775e04f2f5ea77520bc017b78dfd93f8cdae59746c2856a49ffba0ac610bb5faf6e1647ce3564 WHIRLPOOL 77bc860442019efecb4374e0f2c3f94ac9f0d4e8cd3b835d03aa908568f5ac0013ce749791198d381e9ef7df886985c4aa80dc54bcee0e092dedf70c77d3fffa
+MISC ChangeLog 2733 SHA256 efb843b60f10d59daee61bef382209f6839757b2bb2e906b8be151ebb3a1996e SHA512 603df66ff01547342c3d9ab1a96925f29f32995a59af8a46c8ad0517c8b36346856c681213d2e79e5768d8386447c6d51136e387dfa96c509f81215333d73233 WHIRLPOOL fdf6e6e8cfd885190e09f820529d6f19e00e8a431e1f0e264052706506d37245e6fc4a3eab52bf0386c193b60f4bd97974804625f3a4436c114304e5287ef0a2
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlRR3lIACgkQiIP6VqMIqNcM6AD/aYQZYd2qm/hQJ3PlsskdTHCX
-WpOIOt1sga4w7IMxoccA/1JNMzS973FyxFvxQZRvpXuNdFam8pXcgwXnPSP/uKUZ
-=pGQ5
+iF4EAREIAAYFAlRR4TAACgkQiIP6VqMIqNdU6QD+KbgvM/zQ9FaWzj+CndtGPfSK
+U2RtejH/SRC0N20AYf4BAIxAs6IQtnMNghfBHz4od68shX51wNdXPDK123eeVFkS
+=sXjX
 -----END PGP SIGNATURE-----
